--- a/index.html
+++ b/index.html
@@ -59,14 +59,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Pages</a></li>
-                        <li class="nav-item"><a  href="static.html">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Shop</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact</a></li>
-                    </ul>
-                    <ul class="navbar-nav justify-content-end">
-                        <li><a href="#"><i class="icon_search"></i></a></li>
-                        <li><a href="#"><i class="icon_bag_alt"></i></a></li>
+                        <li class="nav-item"><a class="nav-link" href="#skill">Hábilidades</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#service">Servicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#projects">Proyectos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
                     </ul>
                 </div>
             </nav>
@@ -151,7 +147,7 @@
         <!--================End Creative Feature Area =================-->
 
         <!--================Industries Area =================-->
-        <section class="industries_area">
+        <section id="skill" class="industries_area">
             <div class="left_indus">
                 <div class="indus_img">
                     <img src="img/indus-laptop.png" alt="">
@@ -204,7 +200,7 @@
         <!--================End Industries Area =================-->
 
         <!--================Our Service Area =================-->
-        <section class="service_area">
+        <section id="service" class="service_area">
             <div class="container">
                 <div class="center_title">
                     <h2>Our Services</h2>
